management skills added/ course content alignment fixed

--- a/static/styles.css
+++ b/static/styles.css
@@ -190,6 +190,7 @@ h2 {
     display:flex;
     align-items:center;
     overflow: hidden;
+    cursor: pointer;
 }
 
 .gradient {
@@ -206,6 +207,15 @@ h2 {
     background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(238,238,238,1) 70%);
 }
 
+.noteblock {
+    padding-top: 10px;
+    align-items:center;
+}
+
+.contentparam {
+    margin-top:20px;
+    text-align:left;
+}
 .itdetails {
     padding-top: 40px;
     padding-bottom: 40px;
